force-app/main/default/objects/ConsentSettings__mdt/ConsentSettings__mdt.object-meta.xml
<CustomObject>
    <description>Settings for Consent Status</description>
    <label>Consent Settings</label>
    <pluralLabel>Consent Settings</pluralLabel>
</CustomObject>