force-app/main/default/objects/ConsentSettings__mdt/fields/BrandList__c.field-meta.xml
<CustomField>
    <fullName>BrandList__c</fullName>
    <description>List of Brands</description>
    <label>BrandList</label>
    <type>TextArea</type>
</CustomField>