force-app/main/default/objects/ConsentSettings__mdt/fields/CompletedBrandList__c.field-meta.xml
<CustomField>
    <fullName>CompletedBrandList__c</fullName>
    <label>CompletedBrandList</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>