force-app/main/default/objects/ConsentSettings__mdt/fields/CountryList__c.field-meta.xml
<CustomField>
    <fullName>CountryList__c</fullName>
    <description>Country Codes</description>
    <label>CountryList</label>
    <type>TextArea</type>
</CustomField>